# FiniteStateMachineTDDKata

./: .gitignore  CMakeLists.txt  README.md  README.txt  fsm.h  init.sh  test.cpp
prod/: fsm.c  fsm.h  port.c  port.h
test/: test.cpp  test_fsm_using_catch2.cpp  test_fsm_using_gtest.cpp
